# Attestation-Proof

./: package-lock.json  package.json  tailwind.config.js
.trunk/actions/trunk-upgrade-available/: 2024-08-10-21-19-00.238.yaml
backend/: .gitmodules  formattedResult.json  package-lock.json  package.json  server.js
backend/risc0-backend/examples/json/core/src/: lib.rs
backend/risc0-backend/examples/json/methods/guest/: Cargo.toml
backend/risc0-backend/examples/json/res/: example.json
backend/risc0-backend/examples/json/src/: main.rs
backend/risc0-foundry/: Cargo.toml
backend/risc0-foundry/apps/: Cargo.toml
backend/risc0-foundry/contracts/: EvenNumber.sol
backend/risc0-foundry/core/: Cargo.toml
backend/risc0-foundry/core/src/: lib.rs
backend/risc0-foundry/methods/guest/: Cargo.toml
backend/risc0-foundry/methods/src/: lib.rs
public/: index.html
src/: App.jsx  App.tsx  attestation_data.jsx  attestation_data.tsx  client_to_provider.tsx  index.css  index.tsx  output.css  schema_data.jsx  wagmi.ts
src/action/: verify.ts
src/components/loader/: Loader.jsx  loader.css
zk-attest-frame/: package-lock.json  package.json
zk-attest-frame/src/: index.tsx
